--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <p class="textLeftBox"><img class="imgAlert" src="./assets/icoAlert.png">&nbsp;Apenas letras minúculas e sem acento.</p>
                 </div>           
                 <div id="button">
-                    <button class="encripta" onclick="criptografa()">Criptografar</button>
-                    <button class="descriptografa" onclick="descriptografa()">Descriptografar</button>
+                    <button class="encripta" onclick="criptografarTexto()">Criptografar</button>
+                    <button class="descriptografa" onclick="descriptografaTexto()">Descriptografar</button>
                 </div>
             </div>
             <div class="rightBox">
@@ -33,12 +33,12 @@
                 </div>
                 <div id="resultado">
                     <textarea id="textosaida"></textarea>   
-                    <button id="copiar" onclick="copia()">Copiar</button>
+                    <button id="copiar" onclick="copiarTexto()">Copiar</button>
                 </div>    
             </div>
         </main> 
         <footer>
-            <p class="credits">© Rogério Bueno 2022</p>
+            <p class="credits">© Desenvolvido por: Rogério Bueno 2022</p>
         </footer>    
     </body>
 </html>
