--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <p class="textLeftBox"><img class="imgAlert" src="./assets/icoAlert.png">&nbsp;Apenas letras minúculas e sem acento.</p>
                 </div>           
                 <div id="button">
-                    <button class="encripta" onclick="criptografarTexto()">Criptografar</button>
-                    <button class="descriptografa" onclick="descriptografaTexto()">Descriptografar</button>
+                    <button class="btnencripta" onclick="criptografarTexto()">Criptografar</button>
+                    <button class="btndescripta" onclick="descriptografarTexto()">Descriptografar</button>
                 </div>
             </div>
             <div class="rightBox">
@@ -31,14 +31,14 @@
                     <h2 class="textRightBox">Nenhuma mensagem encontrada</h2>
                     <p class="textRightBox">Digite um texto que você deseja criptografar ou descriptografar.</p>
                 </div>
-                <div id="resultado">
+                <div id="resultadoTextoEntrada">
                     <textarea id="textosaida"></textarea>   
-                    <button id="copiar" onclick="copiarTexto()">Copiar</button>
+                    <button id="copiarTexto" onclick="copiarTexto()">Copiar</button>
                 </div>    
             </div>
         </main> 
         <footer>
-            <p class="credits">© Desenvolvido por: Rogério Bueno 2022</p>
+            <p>© Desenvolvido por Rogério Bueno 2022</p>
         </footer>    
     </body>
 </html>
